--- a/05_spring/03_eventos/src/main/resources/application.properties
+++ b/05_spring/03_eventos/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-src/main/resources/application.properties
+import org.springFramework.boot.autoconfigure.SpringBootApplication;
+
+@SpringBootApplication
+public class Application {
+
+Run/Debug
+public static void main(String[]) args) {
+    SprinApplication.run(Application.class, args);
+    }
+    }
