--- a/05_spring/04_login/src/main/resources/application.properties
+++ b/05_spring/04_login/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=04_login
+spring.datasource.url=jdbc:mysql://localhost:3306/db_login
+spring.datasource.username=seu_usuario
+spring.datasource.password=sua_senha
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+# Outras configurações comuns
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
